✨minor style chages

--- a/1-SEI_Builder-step1.ipynb
+++ b/1-SEI_Builder-step1.ipynb
@@ -60,7 +60,7 @@
     "* Each grain shape can be obtained by cutting the supercell with different crystal planes.\n",
     "* By annealing the system, we will allow the atoms on the grain surfaces to form the \"grain bonds.\"\n",
     "\n",
-    "![Sei builder sketch](img/sei_builder_sketch.png)"
+    "![Sei builder sketch](img/seibuilder_sketch.png)"
    ]
   },
   {
@@ -413,7 +413,7 @@
     "from lammps_wrapper.lammps_wrapper.utils import message\n",
     "from matplotlib.colors import LinearSegmentedColormap\n",
     "\n",
-    "from sei_builder import (\n",
+    "from seibuilder import (\n",
     "    from_d_to_grain,\n",
     "    get_bulk_atoms,\n",
     "    get_gcd_pedices,\n",
