--- a/1-SEI_Builder-step1.ipynb
+++ b/1-SEI_Builder-step1.ipynb
@@ -2199,7 +2199,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -2213,7 +2213,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.8.10"
   },
   "toc-autonumbering": true
  },
