✨ improved code quality

--- a/1-SEI_Builder-step1.ipynb
+++ b/1-SEI_Builder-step1.ipynb
@@ -73,30 +73,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "alternate-thesis",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'lammps_wrapper'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[1;32m/mnt/c/Users/Paolo/OneDrive - Politecnico di Torino/2-Progetti/BATTERY2030+/6-Python/SEI_builder/1-SEI_Builder-step1.ipynb Cell 5'\u001b[0m in \u001b[0;36m<cell line: 7>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell://wsl%2Bubuntu-20.04/mnt/c/Users/Paolo/OneDrive%20-%20Politecnico%20di%20Torino/2-Progetti/BATTERY2030%2B/6-Python/SEI_builder/1-SEI_Builder-step1.ipynb#ch0000004vscode-remote?line=3'>4</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mcollections\u001b[39;00m \u001b[39mimport\u001b[39;00m deque\n\u001b[1;32m      <a href='vscode-notebook-cell://wsl%2Bubuntu-20.04/mnt/c/Users/Paolo/OneDrive%20-%20Politecnico%20di%20Torino/2-Progetti/BATTERY2030%2B/6-Python/SEI_builder/1-SEI_Builder-step1.ipynb#ch0000004vscode-remote?line=5'>6</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39m_pickle\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mcPickle\u001b[39;00m\n\u001b[0;32m----> <a href='vscode-notebook-cell://wsl%2Bubuntu-20.04/mnt/c/Users/Paolo/OneDrive%20-%20Politecnico%20di%20Torino/2-Progetti/BATTERY2030%2B/6-Python/SEI_builder/1-SEI_Builder-step1.ipynb#ch0000004vscode-remote?line=6'>7</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mlammps_wrapper\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mlammps_wrapper\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mpylmp\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell://wsl%2Bubuntu-20.04/mnt/c/Users/Paolo/OneDrive%20-%20Politecnico%20di%20Torino/2-Progetti/BATTERY2030%2B/6-Python/SEI_builder/1-SEI_Builder-step1.ipynb#ch0000004vscode-remote?line=7'>8</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mmatplotlib\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mgridspec\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mgridspec\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell://wsl%2Bubuntu-20.04/mnt/c/Users/Paolo/OneDrive%20-%20Politecnico%20di%20Torino/2-Progetti/BATTERY2030%2B/6-Python/SEI_builder/1-SEI_Builder-step1.ipynb#ch0000004vscode-remote?line=8'>9</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mmatplotlib\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mpyplot\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mplt\u001b[39;00m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'lammps_wrapper'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "%load_ext autoreload\n",
+    "%autoreload 2\n",
+    "# TODO remove lines aboves\n",
+    "\n",
     "import importlib\n",
     "import os\n",
+    "import pickle\n",
     "import sys\n",
     "from collections import deque\n",
     "\n",
-    "import _pickle as cPickle\n",
-    "import lammps_wrapper.lammps_wrapper as pylmp\n",
     "import matplotlib.gridspec as gridspec\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
@@ -106,18 +97,15 @@
     "from ase.lattice.hexagonal import HexagonalFactory\n",
     "from ase.visualize import view\n",
     "from IPython.display import Markdown, Math, clear_output, display\n",
-    "from lammps_wrapper.lammps_wrapper.packmol import PackmolStructure, packmol\n",
     "from matplotlib.colors import LinearSegmentedColormap\n",
     "\n",
-    "from seibuilder import (\n",
+    "from seibuilder import (  # get_bulk_atoms,\n",
     "    from_d_to_grain,\n",
-    "    get_bulk_atoms,\n",
     "    get_gcd_pedices,\n",
     "    get_stable_crystal,\n",
     "    random_sei_grains,\n",
     ")\n",
-    "\n",
-    "output_notebook()\n",
+    "from seibuilder.packmol import PackmolStructure, packmol\n",
     "\n",
     "# PACKMOL_BIN = \"/opt/packages/packmol/packmol/bin/packmol\"  # Workstaion\n",
     "# PACKMOL_BIN='/m100_work/IscrB_MODLIBAT/software/packmol/packmol'  # Cineca\n",
