Update jupyter notebook

--- a/1-SEI_Builder-step1.ipynb
+++ b/1-SEI_Builder-step1.ipynb
@@ -115,6 +115,24 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c7b9555d",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-block alert-danger\">\n",
+    "<b>⚠️ Danger:</b> if the previus <i>cell code</i> where we import all the useful libraries you get the \n",
+    "following message\n",
+    "\n",
+    "<code>\n",
+    ".../SEI_builder/seibuilder/mpinterfaces/__init__.py:35: UserWarning: mpint_config.yaml file not configured.\n",
+    "</code>\n",
+    "\n",
+    "You have to get and store the Material Project API Key. Read the relative section in the README file or \n",
+    "the documentation.\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "c0cc47c3",
    "metadata": {},
    "source": [
@@ -122,16 +140,100 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "953b0b7b",
+   "metadata": {},
+   "source": [
+    "In the **code cell** below, we set the main constants.\n",
+    "\n",
+    "* `PACKMOL_BIN`: is the path to packmol binary\n",
+    "* `SEED`: seed number for the random generator\n",
+    "* `SEI_COMPONENTS_INFO`: is a `pandas.DataFrame` containing all the information about the inorganic salts \n",
+    "    forming the SEI"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "a64d24d3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "PACKMOL_BIN = \"./packmol/packmol\"  # Archer2\n",
+    "PACKMOL_BIN = \"./packmol/packmol\"  # Optional, if packmol is bin folder is in the PATH you can set it as `None`\n",
     "SEED = 42\n",
+    "np.array([24, 7, 4])  # [N molecules] LiF, Li2CO3, Li2O\n",
     "\n",
-    "SEI_INFO = pd"
+    "SEI_COMPONENTS_INFO = pd.DataFrame(\n",
+    "    index=[\"LiF\", \"Li2CO3\", \"Li2O\"],  # Empircal chemical formulat of the components (rows)\n",
+    "    columns=[  # name of each data (columns)\n",
+    "        \"molar fractio\",  # The cristals molar fraction\n",
+    "        \"size distribution (mean)size distribution (std)\",  # The mean grain diameters  #\n",
+    "    ],\n",
+    "    data=[[24 / 35, 15.0, 3.0], [7 / 35, 13.0, 3.0], [4 / 35, 10.0, 2.0]],  # LiF  # Li2CO3  # Li2O\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "f4106cc4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Relative molar concentration</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>LiF</th>\n",
+       "      <td>0.685714</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Li2CO3</th>\n",
+       "      <td>0.200000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Li2O</th>\n",
+       "      <td>0.114286</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        Relative molar concentration\n",
+       "LiF                         0.685714\n",
+       "Li2CO3                      0.200000\n",
+       "Li2O                        0.114286"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "SEI_COMPONENTS_INFO"
    ]
   },
   {
