✨ fix settings cell

--- a/1-SEI_Builder-step1.ipynb
+++ b/1-SEI_Builder-step1.ipynb
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "alternate-thesis",
    "metadata": {},
    "outputs": [],
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "a64d24d3",
    "metadata": {},
    "outputs": [],
@@ -167,15 +167,20 @@
     "    index=[\"LiF\", \"Li2CO3\", \"Li2O\"],  # Empircal chemical formulat of the components (rows)\n",
     "    columns=[  # name of each data (columns)\n",
     "        \"molar fractio\",  # The cristals molar fraction\n",
-    "        \"size distribution (mean)size distribution (std)\",  # The mean grain diameters  #\n",
+    "        \"size distribution (mean)\",  # The mean grain diameters\n",
+    "        \"size distribution (std)\",  # The std grain diameters\n",
     "    ],\n",
-    "    data=[[24 / 35, 15.0, 3.0], [7 / 35, 13.0, 3.0], [4 / 35, 10.0, 2.0]],  # LiF  # Li2CO3  # Li2O\n",
+    "    data=[\n",
+    "        [24 / 35, 15.0, 3.0],  # LiF\n",
+    "        [7 / 35, 13.0, 3.0],  # Li2CO3\n",
+    "        [4 / 35, 10.0, 2.0],  # Li2O\n",
+    "    ],\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "f4106cc4",
    "metadata": {},
    "outputs": [
@@ -200,34 +205,42 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Relative molar concentration</th>\n",
+       "      <th>molar fractio</th>\n",
+       "      <th>size distribution (mean)</th>\n",
+       "      <th>size distribution (std)</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>LiF</th>\n",
        "      <td>0.685714</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>3.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Li2CO3</th>\n",
        "      <td>0.200000</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>3.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Li2O</th>\n",
        "      <td>0.114286</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>2.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "        Relative molar concentration\n",
-       "LiF                         0.685714\n",
-       "Li2CO3                      0.200000\n",
-       "Li2O                        0.114286"
+       "        molar fractio  size distribution (mean)  size distribution (std)\n",
+       "LiF          0.685714                      15.0                      3.0\n",
+       "Li2CO3       0.200000                      13.0                      3.0\n",
+       "Li2O         0.114286                      10.0                      2.0"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
